@@ -34,20 +34,19 @@ abstract class enigma_driver
     /**
      * Encryption (and optional signing).
      *
-     * @param string Message body
-     * @param array  List of key-password mapping
-     * @param string Optional signing Key ID
-     * @param string Optional signing Key password
+     * @param string     Message body
+     * @param array      List of keys (enigma_key objects)
+     * @param enigma_key Optional signing Key ID
      *
      * @return mixed Encrypted message or enigma_error on failure
      */
-    abstract function encrypt($text, $keys, $sign_key = null, $sign_pass = null);
+    abstract function encrypt($text, $keys, $sign_key = null);
 
     /**
      * Decryption (and sig verification if sig exists).
      *
      * @param string           Encrypted message
-     * @param array            List of key-password mapping
+     * @param array            List of key-password
      * @param enigma_signature Signature information (if available)
      *
      * @return mixed Decrypted message or enigma_error on failure
@@ -57,14 +56,13 @@ abstract class enigma_driver
     /**
      * Signing.
      *
-     * @param string Message body
-     * @param string Key ID
-     * @param string Key password
-     * @param int    Signing mode (enigma_engine::SIGN_*)
+     * @param string     Message body
+     * @param enigma_key The signing key
+     * @param int        Signing mode (enigma_engine::SIGN_*)
      *
      * @return mixed True on success or enigma_error on failure
      */
-    abstract function sign($text, $key, $passwd, $mode = null);
+    abstract function sign($text, $key, $mode = null);
 
     /**
      * Signature verification.
